--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8081
 spring.application.name=customer-service
 
-#database
+#database h2
 spring.datasource.url=jdbc:h2:mem:customer-DB
 
 #logging 
